# haskell_katas

./: .gitignore  README.md  haskellKatas.cabal
test/Chapter10/: FoldsSpec.hs
test/Chapter11/: AdtSpec.hs
test/Chapter12/: MaybeSpec.hs
test/Chapter2/: ExercisesSpec.hs
test/Chapter3/: ExercisesSpec.hs
test/Chapter4/: ExercisesSpec.hs
test/Chapter5/: ExercisesSpec.hs
test/Chapter6/: EqInstancesSpec.hs
test/Chapter7/: AnonymousSpec.hs  FunctionCompositionSpec.hs  GuardsSpec.hs  PatternMatchingSpec.hs
test/Chapter9/: ListsSpec.hs
test/chapter6/: eq_instances.hs
