name:                haskellKatas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellKatas#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


test-suite haskellKatas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellKatas
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules: Chapter10.FoldsSpec
               , Chapter11.AdtSpec
               , Chapter12.MaybeSpec
               , Chapter2.ExercisesSpec
               , Chapter3.ExercisesSpec
               , Chapter4.ExercisesSpec
               , Chapter5.ExercisesSpec
               , Chapter6.EqInstancesSpec
               , Chapter7.AnonymousSpec
               , Chapter7.FunctionCompositionSpec
               , Chapter7.GuardsSpec
               , Chapter7.PatternMatchingSpec
               , Chapter9.ListsSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellKatas
